	PR optimization/12628 	* toplev.c (rest_of_handle_jump_bypass): Call reg_scan. 	* regclass.c (reg_scan): Include allocate_reg_info time in 	TV_REG_SCAN.  Minor clean-ups. 	(reg_scan_update): Minor clean-ups.

* gcc.dg/20031201-1.c: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74125 138bc75d-0d04-0410-961f-82ee72b054a4